--- a/WebForm/Pages/Shared/QuanLyDiaDiem.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDiaDiem.cshtml
@@ -26,7 +26,7 @@
                                 <!---------------------Thông báo Xóa----------------------------------------------->
                                 if (HttpContext.Session.GetString("xoadiadiem") == "true")
                                 {
-                                    <h5 style="color:red">Xóa thành công</h5>
+                                    <h5 style="color: green">Xóa thành công</h5>
                                     HttpContext.Session.Remove("xoadiadiem");
                                 }
                                 <!---------------------Thông báo Thêm----------------------------------------------->
@@ -38,7 +38,7 @@
                                 <!---------------------Thông báo Sửa----------------------------------------------->
                                 if (HttpContext.Session.GetString("suadiadiem") == "true")
                                 {
-                                    <h5 style="color: saddlebrown">Sửa thành công</h5>
+                                    <h5 style="color: green">Sửa thành công</h5>
                                     HttpContext.Session.Remove("suadiadiem");
                                 }
                             }
