--- a/WebForm/Pages/Shared/QuanLyNhanVien.cshtml
+++ b/WebForm/Pages/Shared/QuanLyNhanVien.cshtml
@@ -27,7 +27,7 @@
                                 <!---------------------Thông báo Xóa----------------------------------------------->
                                 if (HttpContext.Session.GetString("xoanhanvien") == "true")
                                 {
-                                    <h5 style="color: red">Xóa thành công</h5>
+                                    <h5 style="color: green">Xóa thành công</h5>
                                     HttpContext.Session.Remove("xoanhanvien");
                                 }
                                 <!---------------------Thông báo Thêm----------------------------------------------->
@@ -39,7 +39,7 @@
                                 <!---------------------Thông báo Sửa----------------------------------------------->
                                 if (HttpContext.Session.GetString("suanhanvien") == "true")
                                 {
-                                    <h5 style="color: saddlebrown">Sửa thành công</h5>
+                                    <h5 style="color: green">Sửa thành công</h5>
                                     HttpContext.Session.Remove("suanhanvien");
                                 }
                             }
