--- a/WebForm/Pages/Shared/ThongKeNhanVien.cshtml
+++ b/WebForm/Pages/Shared/ThongKeNhanVien.cshtml
@@ -30,7 +30,7 @@
 <div class="main-panel">
     <div class="content-wrapper">
         <div class="row">
-            <div class="col-12 grid-margin stretch-card">
+            <div class="col-6 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Thống kê</h4>
@@ -50,6 +50,8 @@
                         </form>
                     </div>
                 </div>
+            </div>
+            <div class="col-6 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
                         <div class="table-responsive">
@@ -65,13 +67,13 @@
                                     @{
                                         foreach (DoanDuLichDTO item in doan)
                                         {
-                                    <tr>
-                                        <td>@item.Id_Doan</td>
-                                        <td>@item.Ngaykhoihanh</td>
-                                        <td>@item.Ngayketthuc</td>
-                                    </tr>
-                                            }
+                                            <tr>
+                                                <td>@item.Id_Doan</td>
+                                                <td>@item.Ngaykhoihanh</td>
+                                                <td>@item.Ngayketthuc</td>
+                                            </tr>
                                         }
+                                    }
                                 </tbody>
                             </table>
                         </div>
